--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -1,62 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    app:cardCornerRadius="10dp"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_marginRight="10dp"
     android:layout_marginLeft="10dp"
     android:layout_marginTop="5dp"
+    android:layout_marginRight="10dp"
     android:layout_marginBottom="5dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorTheme"
-    android:layout_height="wrap_content"
-    >
+    app:cardCornerRadius="10dp">
 
     <LinearLayout
-
-        android:background="@color/colorWhite"
-        android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/colorWhite"
+        android:orientation="vertical">
+
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
             <ImageView
+                android:id="@+id/imgproduct"
                 android:layout_width="180dp"
                 android:layout_height="180dp"
                 android:scaleType="centerCrop"
-                android:src="@mipmap/ic_launcher"
-                android:id="@+id/imgproduct"/>
+                android:src="@mipmap/ic_launcher" />
         </FrameLayout>
+
         <LinearLayout
-            android:orientation="vertical"
-            android:padding="5dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="5dp">
+
             <TextView
+                android:id="@+id/tvtenproduct"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tên sản phẩm"
-                android:maxLines="2"
                 android:ellipsize="end"
                 android:gravity="left"
                 android:lines="2"
                 android:maxWidth="170dp"
+                android:maxLines="2"
+                android:text="Tên sản phẩm"
                 android:textColor="@color/colorBlack"
-                android:textStyle="bold"
                 android:textSize="15sp"
-                android:id="@+id/tvtenproduct"/>
+                android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/tvgiaproduct"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="30000"
                 android:gravity="left"
+                android:text="30000"
                 android:textColor="@color/colorBlack"
-                android:textSize="12sp"
-                />
+                android:textSize="12sp" />
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
