--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -103,7 +103,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Hóa đơn"
+            android:text="Order"
             android:textColor="@color/colorBlack"
             android:textSize="15sp" />
     </LinearLayout>
@@ -160,7 +160,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Lịch sử"
+                android:text="Lịch sử order"
                 android:textColor="@color/colorBlack"
                 android:textSize="15sp" />
         </LinearLayout>
