--- a/app/src/main/res/layout/activity_bill.xml
+++ b/app/src/main/res/layout/activity_bill.xml
@@ -230,22 +230,12 @@
                         android:layout_marginBottom="5dp"
                         android:background="@drawable/custom_border_simple"
                         android:hint="..."
+                        android:inputType="text"
                         android:padding="10dp"
                         android:textColorHint="@color/colorSilver"
                         android:textSize="12sp" />
                 </LinearLayout>
             </LinearLayout>
-
-            <info.hoang8f.widget.FButton
-                android:id="@+id/btnthemsanphambill"
-                android:layout_width="200dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="5dp"
-                android:text="Thêm món khác"
-                android:textAllCaps="false"
-                android:textColor="@color/colorWhite" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvsanphamorder"
