--- a/app/src/main/res/layout/activity_forgot.xml
+++ b/app/src/main/res/layout/activity_forgot.xml
@@ -9,82 +9,88 @@
     android:gravity="center"
     android:background="@color/theme"
     tools:context=".activity.ForgotActivity">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="10dp">
 
-        <TextView
-            android:id="@+id/tvquenmatkhau"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Quên mật khẩu"
-            android:textColor="@color/colorWhite"
-            android:textSize="40sp" />
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:scaleType="fitXY"
-            android:src="@mipmap/ic_app_foreground" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
         <LinearLayout
-            android:layout_marginTop="50dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <TextView
+                android:id="@+id/tvquenmatkhau"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Email"
+                android:text="Quên mật khẩu"
                 android:textColor="@color/colorWhite"
-                android:textSize="15sp" />
-
-            <EditText
-                android:id="@+id/edtemailquenmatkhau"
+                android:textSize="40sp" />
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:scaleType="fitXY"
+                android:src="@mipmap/ic_app_foreground" />
+            <LinearLayout
+                android:layout_marginTop="50dp"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Email"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="15sp" />
+
+                <EditText
+                    android:id="@+id/edtemailquenmatkhau"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="5dp"
+                    android:background="@drawable/custom_border_edittext"
+                    android:hint="Abc@gmail.com"
+                    android:inputType="textEmailAddress"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:textColor="@color/colorWhite"
+                    android:textColorHint="@color/colorAqua3"
+                    android:textSize="15sp" />
+            </LinearLayout>
+
+            <ProgressBar
+                android:id="@+id/progressbarquenmatkhau"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="20dp"
+                android:visibility="gone"
+                tools:targetApi="lollipop" />
+
+            <Button
+                android:id="@+id/btnlaymatkhaumoi"
+                android:layout_width="200dp"
                 android:layout_height="40dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/custom_border_edittext"
-                android:hint="Abc@gmail.com"
-                android:inputType="textEmailAddress"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
+                android:layout_marginTop="50dp"
+                android:background="@drawable/custom_click_btn"
+                android:text="Lấy mật khẩu mới"
+                android:textAllCaps="false"
                 android:textColor="@color/colorWhite"
-                android:textColorHint="@color/colorAqua3"
                 android:textSize="15sp" />
+            <TextView
+                android:id="@+id/tvthongbaoquenmatkhau"
+                android:textAlignment="center"
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Bạn sẽ nhận được một email để đặt lại mật khẩu."
+                android:textColor="@color/colorAqua"
+                android:maxLines="2"
+                android:ellipsize="end"
+                android:textSize="12sp" />
         </LinearLayout>
 
-        <ProgressBar
-            android:id="@+id/progressbarquenmatkhau"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="20dp"
-            android:visibility="gone"
-            tools:targetApi="lollipop" />
-
-        <Button
-            android:id="@+id/btnlaymatkhaumoi"
-            android:layout_width="200dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/custom_click_btn"
-            android:text="Lấy mật khẩu mới"
-            android:textAllCaps="false"
-            android:textColor="@color/colorWhite"
-            android:textSize="15sp" />
-        <TextView
-            android:id="@+id/tvthongbaoquenmatkhau"
-            android:textAlignment="center"
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Bạn sẽ nhận được một email để đặt lại mật khẩu."
-            android:textColor="@color/colorAqua"
-            android:maxLines="2"
-            android:ellipsize="end"
-            android:textSize="12sp" />
-    </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
