--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
     android:background="@color/theme"
+    android:gravity="center"
     tools:context=".activity.LoginActivity">
 
-    <RelativeLayout
-        android:id="@+id/relaydangnhap"
-        android:gravity="center"
-        android:visibility="visible"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -29,6 +27,7 @@
                 android:text="Đăng nhập"
                 android:textColor="@color/colorWhite"
                 android:textSize="40sp" />
+
             <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
@@ -36,9 +35,9 @@
                 android:src="@mipmap/ic_app_foreground" />
 
             <LinearLayout
-                android:layout_marginTop="50dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
                 android:orientation="vertical">
 
                 <TextView
@@ -109,44 +108,48 @@
                 android:textAllCaps="false"
                 android:textColor="@color/colorWhite"
                 android:textSize="15sp" />
+
             <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:gravity="center"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:orientation="horizontal">
+
                 <TextView
-                    android:textSize="12sp"
-                    android:textColor="@color/colorSilver"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Bạn chưa có tài khoản?"/>
+                    android:text="Bạn chưa có tài khoản?"
+                    android:textColor="@color/colorSilver"
+                    android:textSize="12sp" />
+
                 <TextView
                     android:id="@+id/tvdangkyngay"
-                    android:textSize="12sp"
-                    android:textColor="@color/colorAqua"
-                    android:layout_marginLeft="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Đăng ký ngay!"/>
+                    android:layout_marginLeft="5dp"
+                    android:text="Đăng ký ngay!"
+                    android:textColor="@color/colorAqua"
+                    android:textSize="12sp" />
             </LinearLayout>
+
             <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:gravity="center"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/tvquamanhinhquenmatkhau"
-                    android:textSize="12sp"
-                    android:textColor="@color/colorSilver"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Quên mật khẩu?"/>
+                    android:text="Quên mật khẩu?"
+                    android:textColor="@color/colorSilver"
+                    android:textSize="12sp" />
 
             </LinearLayout>
         </LinearLayout>
-    </RelativeLayout>
-
+    </ScrollView>
 
 </RelativeLayout>
