--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,211 +9,216 @@
     android:gravity="center"
     tools:context=".activity.RegisterActivity">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="10dp">
-
-        <TextView
-            android:id="@+id/tvdangky"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Đăng ký"
-            android:textColor="@color/colorWhite"
-            android:textSize="40sp" />
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:scaleType="fitXY"
-            android:src="@mipmap/ic_app_foreground" />
+        android:layout_height="wrap_content">
         <LinearLayout
-            android:layout_marginTop="50dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <TextView
+                android:id="@+id/tvdangky"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Email"
+                android:text="Đăng ký"
                 android:textColor="@color/colorWhite"
-                android:textSize="15sp" />
-
-            <EditText
-                android:id="@+id/edtemaildangky"
+                android:textSize="40sp" />
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:scaleType="fitXY"
+                android:src="@mipmap/ic_app_foreground" />
+            <LinearLayout
+                android:layout_marginTop="50dp"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/custom_border_edittext"
-                android:hint="example@gmail.com"
-                android:inputType="textEmailAddress"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
-                android:textColor="@color/colorWhite"
-                android:textColorHint="@color/colorAqua3"
-                android:textSize="15sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Họ tên"
-                android:textColor="@color/colorWhite"
-                android:textSize="15sp" />
+                android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/edttendangky"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/custom_border_edittext"
-                android:hint="Nguyễn Văn A"
-                android:inputType="text"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
-                android:textColor="@color/colorWhite"
-                android:textColorHint="@color/colorAqua3"
-                android:textSize="15sp" />
-        </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Email"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="15sp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Mật khẩu"
-                android:textColor="@color/colorWhite"
-                android:textSize="15sp" />
-
-            <EditText
-                android:id="@+id/edtmatkhaudangky"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/custom_border_edittext"
-                android:hint="Mật khẩu 6 ký tự trở lên"
-                android:inputType="textPassword"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
-                android:textColor="@color/colorWhite"
-                android:textColorHint="@color/colorAqua3"
-                android:textSize="15sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Số điện thoại"
-                android:textColor="@color/colorWhite"
-                android:textSize="15sp" />
-
-            <EditText
-                android:id="@+id/edtsdtdangky"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/custom_border_edittext"
-                android:hint="093xxxxxxx"
-                android:inputType="phone"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
-                android:textColor="@color/colorWhite"
-                android:textColorHint="@color/colorAqua3"
-                android:textSize="15sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/custom_bg_radiobuttonground"
-            android:orientation="horizontal">
-
-            <RadioGroup
-                android:id="@+id/radiobuttondangky"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content">
-
-                <RadioButton
-                    android:id="@+id/nam"
+                <EditText
+                    android:id="@+id/edtemaildangky"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Nam"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="5dp"
+                    android:background="@drawable/custom_border_edittext"
+                    android:hint="example@gmail.com"
+                    android:inputType="textEmailAddress"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
                     android:textColor="@color/colorWhite"
-                    android:textStyle="bold" />
+                    android:textColorHint="@color/colorAqua3"
+                    android:textSize="15sp" />
+            </LinearLayout>
 
-                <RadioButton
-                    android:id="@+id/nu"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical">
+
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Nữ"
+                    android:text="Họ tên"
                     android:textColor="@color/colorWhite"
-                    android:textStyle="bold" />
+                    android:textSize="15sp" />
 
-            </RadioGroup>
-            <RadioGroup
-                android:id="@+id/radioCheck"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content">
-                <RadioButton
-                    android:id="@+id/nhanvien"
+                <EditText
+                    android:id="@+id/edttendangky"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="5dp"
+                    android:background="@drawable/custom_border_edittext"
+                    android:hint="Nguyễn Văn A"
+                    android:inputType="text"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:textColor="@color/colorWhite"
+                    android:textColorHint="@color/colorAqua3"
+                    android:textSize="15sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical">
+
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Nhân viên"
-                    android:textStyle="bold"
+                    android:text="Mật khẩu"
                     android:textColor="@color/colorWhite"
-                    />
-                <RadioButton
-                    android:id="@+id/khachhang"
+                    android:textSize="15sp" />
+
+                <EditText
+                    android:id="@+id/edtmatkhaudangky"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="5dp"
+                    android:background="@drawable/custom_border_edittext"
+                    android:hint="Mật khẩu 6 ký tự trở lên"
+                    android:inputType="textPassword"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:textColor="@color/colorWhite"
+                    android:textColorHint="@color/colorAqua3"
+                    android:textSize="15sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical">
+
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Khách hàng"
-                    android:textStyle="bold"
+                    android:text="Số điện thoại"
                     android:textColor="@color/colorWhite"
-                    />
+                    android:textSize="15sp" />
 
-            </RadioGroup>
+                <EditText
+                    android:id="@+id/edtsdtdangky"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="5dp"
+                    android:background="@drawable/custom_border_edittext"
+                    android:hint="093xxxxxxx"
+                    android:inputType="phone"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:textColor="@color/colorWhite"
+                    android:textColorHint="@color/colorAqua3"
+                    android:textSize="15sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/custom_bg_radiobuttonground"
+                android:orientation="horizontal">
+
+                <RadioGroup
+                    android:id="@+id/radiobuttondangky"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content">
+
+                    <RadioButton
+                        android:id="@+id/nam"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Nam"
+                        android:textColor="@color/colorWhite"
+                        android:textStyle="bold" />
+
+                    <RadioButton
+                        android:id="@+id/nu"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Nữ"
+                        android:textColor="@color/colorWhite"
+                        android:textStyle="bold" />
+
+                </RadioGroup>
+                <RadioGroup
+                    android:id="@+id/radioCheck"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content">
+                    <RadioButton
+                        android:id="@+id/nhanvien"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Nhân viên"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorWhite"
+                        />
+                    <RadioButton
+                        android:id="@+id/khachhang"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Khách hàng"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorWhite"
+                        />
+
+                </RadioGroup>
+            </LinearLayout>
+
+            <ProgressBar
+                android:id="@+id/progressbardangky"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="20dp"
+                android:visibility="gone"
+                tools:targetApi="lollipop" />
+
+            <Button
+                android:id="@+id/btndangky"
+                android:layout_width="200dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="50dp"
+                android:background="@drawable/custom_click_btn"
+                android:text="Đăng ký"
+                android:textAllCaps="false"
+                android:textColor="@color/colorWhite"
+                android:textSize="15sp" />
         </LinearLayout>
 
-        <ProgressBar
-            android:id="@+id/progressbardangky"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="20dp"
-            android:visibility="gone"
-            tools:targetApi="lollipop" />
-
-        <Button
-            android:id="@+id/btndangky"
-            android:layout_width="200dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/custom_click_btn"
-            android:text="Đăng ký"
-            android:textAllCaps="false"
-            android:textColor="@color/colorWhite"
-            android:textSize="15sp" />
-    </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
 
