--- a/app/src/main/res/layout/activity_example.xml
+++ b/app/src/main/res/layout/activity_example.xml
@@ -74,4 +74,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hủy" />
+
+    <TextView
+        android:id="@+id/tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Nani"
+        android:textSize="40dp"/>
 </LinearLayout>
