--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -143,7 +143,7 @@
             android:visibility="gone"
             android:background="@color/colorSilver"/>
         <LinearLayout
-            android:id="@+id/layoutlichsu"
+            android:id="@+id/layoutlichsunhanvien"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/custom_click_item_account"
@@ -161,6 +161,28 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Lịch sử order"
+                android:textColor="@color/colorBlack"
+                android:textSize="15sp" />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/layoutlichsukhachhang"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/custom_click_item_account"
+            android:gravity="center_vertical"
+            android:visibility="gone"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:padding="15dp"
+                android:src="@drawable/ic_bill" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Lịch sử"
                 android:textColor="@color/colorBlack"
                 android:textSize="15sp" />
         </LinearLayout>
