--- a/app/src/main/res/layout/fragment_newspaper.xml
+++ b/app/src/main/res/layout/fragment_newspaper.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorTheme4"
     android:orientation="vertical"
     android:layout_width="match_parent"
